tests/snapshots/regression/collections__empty_and_singleton.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/empty_and_singleton.flx
exit_code: 1

• 3 errors • tests/fixtures/collections/empty_and_singleton.flx
error[E415]: Missing Main Function (strict)

Strict mode requires `fn main()` for all programs.

  tests/fixtures/collections/empty_and_singleton.flx:1:1
  |
1 | [];
  | ^^^
2 | [1];
  | ^^^^
3 | f();
  | ^^^^
4 | f(1);
  | ^^^^^

Hint:
  Add `fn main() { ... }` as the program entrypoint.


error[E004]: Undefined Variable

I can't find a value named `f`.

  tests/fixtures/collections/empty_and_singleton.flx:3:1
  |
3 | f();
  | ^

Hint:
  Define it first: let f = ...;

Help:
  Did you mean one of: `find`, `fold`, `first`?


error[E004]: Undefined Variable

I can't find a value named `f`.

  tests/fixtures/collections/empty_and_singleton.flx:4:1
  |
4 | f(1);
  | ^

Hint:
  Define it first: let f = ...;

Help:
  Did you mean one of: `find`, `fold`, `first`?

Found 3 errors.
